--- a/src/styles/04_organisms/_o-hero.scss
+++ b/src/styles/04_organisms/_o-hero.scss
@@ -1,10 +1,12 @@
 .o-hero {
   $root: &;
   @include media-breakpoint-up(md) {
-    padding: 15rem 0;
+    padding-top: 200px;
+    padding-bottom: 70px;
   }
 
-  padding: 10rem 0;
+  padding-top: 8rem;
+  padding-bottom: 5.125rem;
   background-color: $blue;
   color: $white;
   position: relative;
@@ -30,8 +32,9 @@
 
     #{$root}__figure {
       @include media-breakpoint-down(xl) {
-        width: 100%;
+        width: calc(100% - 40px);
       }
+
       right: 0;
       width: calc(100% - 80px);
       margin: auto;
@@ -40,7 +43,7 @@
       max-width: 1600px;
 
       img {
-        @include media-breakpoint-down(sm) {
+        @include media-breakpoint-down(md) {
           object-position: bottom;
         }
 
@@ -55,6 +58,15 @@
         background-image: none;
       }
     }
+
+    #{$root}__body {
+      padding: 0 2rem;
+    }
+
+    &-sm {
+      padding-top: 8.125rem;
+      padding-bottom: 8.125rem;
+    }
   }
 
   &--full {
@@ -64,11 +76,7 @@
       max-width: 100%;
 
       img {
-        @include media-breakpoint-down(sm) {
-          object-position: bottom;
-        }
-
-        object-position: right;
+        object-position: bottom;
       }
 
       &::before {
@@ -86,9 +94,12 @@
       font-size: 4rem;
     }
     @include media-breakpoint-down(md) {
-      font-size: 2rem;
+      font-size: 3rem;
       line-height: 50px;
       margin-bottom: 30px;
+    }
+    @include media-breakpoint-down(sm) {
+      font-size: 2rem;
     }
 
     font-size: 5rem;
@@ -111,6 +122,23 @@
   &__body {
     position: relative;
     z-index: 10;
+  }
+
+  &__box {
+    @include media-breakpoint-down(xl) {
+      min-height: auto;
+      max-width: 100%;
+      text-align: left;
+      padding-left: 2.5rem;
+      top: 0;
+    }
+
+    min-height: auto;
+    max-width: 626px;
+    padding-left: 4.5rem;
+    padding-right: 6.25rem;
+    position: relative;
+    top: 120px;
   }
 
   &__figure {
