--- a/src/styles/01_base/_variables.scss
+++ b/src/styles/01_base/_variables.scss
@@ -567,7 +567,7 @@ $aspect-ratios: (
 // stylelint-disable value-keyword-case
 $font-family-sans-serif:     'Open Sans', system-ui, -apple-system, "Segoe UI",
 Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif,
-"Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
+"Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 ;
 $font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 
