--- a/src/styles/02_atoms/_a-title.scss
+++ b/src/styles/02_atoms/_a-title.scss
@@ -1,4 +1,8 @@
 .a-title {
+  @include media-breakpoint-down(md) {
+    font-size: 1.25rem;
+  }
+
   font-size: 1.5625rem;
   line-height: 35px;
 
@@ -18,6 +22,10 @@
   &--bold {
     font-weight: $font-weight-bold;
     margin-bottom: 3.125rem;
+
+    &-white {
+      color: $white;
+    }
   }
 
   &--sm {
