--- a/src/styles/03_molecules/_m-box.scss
+++ b/src/styles/03_molecules/_m-box.scss
@@ -1,4 +1,9 @@
 .m-box {
+  @include media-breakpoint-down(lg) {
+    max-width: 100%;
+    text-align: center;
+  }
+
   padding-top: 1.25rem;
   padding-bottom: 2.25rem;
   padding-left: 3.125rem;
@@ -16,12 +21,16 @@
   &--dotted {
     padding-top: 2.25rem;
     background-image: url(../img/dots.svg);
-    background-position: top;
+    background-position: 50% -13px;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: 90%;
   }
 
   &__header {
+    @include media-breakpoint-down(lg) {
+      padding-left: 0px;
+    }
+
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
     padding-left: 30px;
@@ -31,6 +40,10 @@
   }
 
   &__body {
+    @include media-breakpoint-down(lg) {
+      padding-left: 0px;
+    }
+
     padding-left: 30px;
   }
 
