--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -25,7 +25,7 @@
 @import "bootstrap/scss/forms/validation.scss";
 
 // @import "bootstrap/scss/card.scss";
-// @import "bootstrap/scss/accordion.scss";
+@import "bootstrap/scss/accordion.scss";
 // @import "bootstrap/scss/breadcrumb.scss";
 // @import "bootstrap/scss/pagination.scss";
 // @import "bootstrap/scss/badge.scss";
@@ -80,6 +80,7 @@
 @import "./03_molecules/_m-list";
 @import "./03_molecules/_m-form";
 @import "./03_molecules/_m-white-box";
+@import "./03_molecules/_m-accordion";
 
 // Organisms
 @import "./04_organisms/_o-hello";
