--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,7 +17,7 @@
 // @import "bootstrap/scss/tables.scss";
 @import "bootstrap/scss/forms.scss";
 // @import "bootstrap/scss/buttons.scss";
-// @import "bootstrap/scss/transitions.scss";
+@import "bootstrap/scss/transitions.scss";
 @import "bootstrap/scss/dropdown.scss";
 // @import "bootstrap/scss/button-group.scss";
 @import "bootstrap/scss/nav.scss";
@@ -53,6 +53,8 @@
 @import "./01_base/global";
 
 @import "swiper/swiper";
+
+$lg-path-images: '../img';
 @import 'lightgallery/scss/lightgallery-bundle.scss';
 
 
