--- a/src/styles/03_molecules/_m-accordion.scss
+++ b/src/styles/03_molecules/_m-accordion.scss
@@ -16,17 +16,25 @@
   &__about {
     display: flex;
     gap: 25px;
-    padding-right: 40px;
-    padding-left: 40px;
     flex-wrap: wrap;
     line-height: 40px;
+    font-size: 15px;
+    font-family: $font-family-base;
   }
 
   &__btn {
+    @include media-breakpoint-up(lg) {
+      flex-direction: row;;
+    }
+
     padding: 40px;
     width: auto;
     margin-bottom: 0;
     font-family: $headings-font-family;
+    width: 100%;
+    display: flex;
+    flex-direction: column;;
+    justify-content: space-between;
 
     &:focus {
       box-shadow: none;
@@ -44,14 +52,11 @@
       color: $gray-800;
       background-color: $white;
       box-shadow: none;
-
-      &::after {
-        background-image: none;
-      }
     }
 
+
     &::after {
-      background-image: none;
+      display: none;
     }
 
   }
