--- a/src/styles/03_molecules/_m-box.scss
+++ b/src/styles/03_molecules/_m-box.scss
@@ -3,6 +3,14 @@
     max-width: 100%;
     text-align: center;
   }
+  @include media-breakpoint-up(lg) {
+    position: sticky;
+    top: calc(100px + 5rem);
+
+    &--no-sticky {
+      position: unset;
+    }
+  }
 
   padding-top: 1.25rem;
   padding-bottom: 2.25rem;
@@ -20,10 +28,22 @@
 
   &--dotted {
     padding-top: 2.25rem;
-    background-image: url(../img/dots.svg);
-    background-position: 50% -13px;
-    background-repeat: no-repeat;
-    background-size: 90%;
+    position: relative;
+    top: 0;
+
+    &:before {
+      position: absolute;
+      top: 0;
+      content: "";
+      background-image: url(../img/dots.svg);
+      background-position: 50% -50%;
+      background-repeat: no-repeat;
+      background-size: contain;
+      width: 100%;
+      height: 28px;
+      left: 0;
+      transform: translateY(-50%);
+    }
   }
 
   &__header {
