--- a/src/styles/04_organisms/_o-header.scss
+++ b/src/styles/04_organisms/_o-header.scss
@@ -9,7 +9,16 @@
   min-height: 100px;
   border-bottom: 1px solid rgba($white, 0.1);
 
-  &.stickyNav {
+  // &.stickyNav {
+  //   background-color: $gray-800;
+  // }
+
+  &__overlay {
+    width: 100%;
+    height: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
     background-color: $gray-800;
   }
 
