--- a/src/styles/02_atoms/_a-title.scss
+++ b/src/styles/02_atoms/_a-title.scss
@@ -39,7 +39,7 @@
 
   &--footer {
     font-size: 14px;
-    font-family: 'Open Sans';
+    font-family: $font-family-base;
     color: $white;
     font-weight: $font-weight-bold;
   }
