--- a/src/styles/02_atoms/_a-perex.scss
+++ b/src/styles/02_atoms/_a-perex.scss
@@ -9,6 +9,11 @@
  font-size: $font-size-lg;
  line-height: 35px;
 
+ a {
+   color: $gray-800;
+   text-decoration: none;
+ }
+
   &--sm {
     max-width: 24.0625rem;
   }
