--- a/src/styles/03_molecules/_m-accordion.scss
+++ b/src/styles/03_molecules/_m-accordion.scss
@@ -23,8 +23,9 @@
     gap: 25px;
     flex-wrap: wrap;
     line-height: 40px;
-    font-size: 15px;
+    font-size: 14px;
     font-family: $font-family-base;
+    font-weight: $font-weight-normal;
   }
 
   &__btn {
