--- a/src/styles/03_molecules/_m-submenu.scss
+++ b/src/styles/03_molecules/_m-submenu.scss
@@ -18,6 +18,7 @@
   top: 100px !important;
   right: 50%;
   transform: translateX(-25%) !important;
+  border: none;
 
   &.open {
     display: block;
