feat: update stylelint

--- a/src/styles/01_base/_variables.scss
+++ b/src/styles/01_base/_variables.scss
@@ -1,3 +1,4 @@
+/* stylelint-disable */
 // stylelint-disable indentation declaration-no-important, selector-no-qualifying-type, property-no-vendor-prefix
 
 // Variables
@@ -1629,3 +1630,4 @@ $kbd-color:                         $white;
 $kbd-bg:                            $gray-900;
 
 $pre-color:                         null;
+/* stylelint-enable */
